--- a/src/app/web-team/Team.css
+++ b/src/app/web-team/Team.css
@@ -190,11 +190,13 @@ header::before {
   /* margin: auto; */
   background-repeat: no-repeat;
   /* background-color: rgb(27, 27, 27); */
-  background: linear-gradient(to bottom,
-      rgb(3, 0, 20),
-      rgb(22, 22, 22),
-      rgb(37, 37, 37),
-      rgb(47, 47, 47));
+  background: linear-gradient(
+    to bottom,
+    rgb(3, 0, 20),
+    rgb(22, 22, 22),
+    rgb(37, 37, 37),
+    rgb(47, 47, 47)
+  );
   box-shadow:
     0px 5px 30px -8px rgb(187, 54, 253),
     0px -6px 30px -8px rgb(53, 226, 189);
