--- a/src/app/council/Studentcouncil.css
+++ b/src/app/council/Studentcouncil.css
@@ -8,7 +8,6 @@ body {
   margin: 0;
   padding: 0;
   height: 100%;
-
   font-family: 'Dosis', sans-serif;
 }
 #rep {
@@ -36,18 +35,19 @@ h2 {
   width: 220px;
   height: 220px;
   background: #fff;
-  padding: 5px;
+  padding: 05px;
   border-radius: 50%;
   box-shadow: 0 0 22px #3336;
   transition: 0.6s;
-  margin: 10px 25px;
+  margin: 10px 55px;
 }
 
 .profile-card:hover {
   transform: translateY(28px);
-
   border-radius: 10px;
-  height: 260px;
+  height: 300px;
+  background: #fff;
+  padding-bottom: 30px;
 }
 
 .profile-card:hover .img {
@@ -79,9 +79,8 @@ h2 {
 
 .caption {
   text-align: center;
-  transform: translateY(-87px);
+  transform: translateY(-90px);
   opacity: 0;
-
   transition: 0.6s;
 }
 
@@ -109,9 +108,6 @@ h2 {
 
 .caption .social-links a {
   color: #333;
-  /* margin-right: 15px; */
-  /* margin-bottom: 5px; */
-  /* padding-bottom: 50px; */
   font-size: 16px;
   transition: 0.6s;
 }
@@ -119,7 +115,6 @@ h2 {
 .social-links {
   width: 100%;
   margin: auto;
-  /* margin-bottom: 100px; */
 }
 
 .social-links a {
@@ -130,11 +125,6 @@ h2 {
   color: #0c52a1;
 }
 
-.social-linkss {
-  width: 100%;
-  margin: auto;
-  /* margin-bottom: 100px; */
-}
 
 .social-linkss a {
   margin: 1rem;
@@ -153,7 +143,6 @@ h2 {
   box-shadow: 0 0 22px #3336;
   transition: 0.6s;
   margin: 0 25px;
-  /* display: flex; */
 }
 
 .s-profile-card:hover {
@@ -192,9 +181,6 @@ h2 {
   margin-bottom: 2px;
 }
 
-.s-profile-card:hover .s-profile-card h3 {
-  display: block;
-}
 
 .s-profile-card h4 {
   font-size: 13px;
@@ -205,7 +191,6 @@ h2 {
 
 .s-caption .s-social-links a {
   color: #333;
-  /* margin: auto; */
   margin-right: 15px;
   font-size: 21px;
   transition: 0.6s;
@@ -345,8 +330,6 @@ h2 {
 
 .tabcontent {
   color: white;
-  /* display: none; */
-  /* padding-top: 2rem; */
   width: 100%;
   padding: 50px 0;
   text-align: center;
@@ -375,14 +358,10 @@ h2 {
 }
 
 .subTeamMember1 img {
-  width: 100%;
-  height: 100%;
   object-fit: cover;
 }
 
 .TeamMember1 img {
-  width: 100%;
-  height: 100%;
   object-fit: cover;
 }
 
